# WindowsDllExample

./: .gitignore  README.md
DllProject/: CMakeLists.txt  build.ps1
DllProject/src/: foo.c
ExeProject/: CMakeLists.txt
ExeProject/src/: main.c
